<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tx_rule_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:focusable="true"
            android:layout_weight="0.3"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_filter_rule_name"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tx_description"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:layout_weight="0.3"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_filter_rule_description"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_manage_patterns"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id ="@+id/bt_filter_rule_patterns"
            android:onClick="onManagePatterns" />
    </LinearLayout>

    <TextView
        android:id ="@+id/tx_rule_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/rounded_corner_yellow"
        android:text="@string/tx_patterns_in_rule"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id ="@+id/tx_filter_rule_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/rounded_corner_purple"
        android:text="@string/tx_rule_validation"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>