<resources>
    <string name="app_name">Prisma CallBlocker</string>
    <string name="tx_no_detect">Not detecting</string>
    <string name="tx_detect">Detecting</string>
    <string name="tx_notification">Go to the service manager</string>
    <string name="tx_turn_on">Turn on</string>
    <string name="tx_turn_off">Turn off</string>
    <string name="tx_exit">Exit</string>
    <string name="file_shared_prefs_name">prismaCallBlocker.preferences</string>
    <string name="pk_state">state</string>
    <string name="tx_state_running">running</string>
    <string name="tx_state_idle">idle</string>
    <string name="ky_number_called">number</string>
    <string name="ky_received">received</string>
    <string name="ky_triggered">triggered</string>
    <string name="ac_call">com.prismaqf.action.call</string>
    <string name="tx_calls_received">Calls received:</string>
    <string name="tx_trigger_events">Trigger events:</string>
    <string name="db_file_name">pcb.db</string>
    <string name="ac_show_filters">Show active filters</string>
    <string name="ac_show_runs">Show latest service runs</string>
    <string name="ac_show_calls">Show latest call received</string>
    <string name="ac_show_triggers">Show latest triggered events</string>
    <string name="ac_show_calendar_rules">Show calendar rules</string>
    <string name="ac_show_filter_rules">Show filter rules</string>
    <string name="tx_sql_limit">Max size of DB query</string>
    <string name="tx_log_longevity">Keep call logs for…</string>
    <string name="tx_toasts_verbosity">Show toast messages</string>
    <string name="ac_setting">Settings</string>
    <string name="pk_sql_limit">sql_query_limit</string>
    <string name="pk_log_longevity">log_longevity</string>
    <string name="pk_toast_verbosity">toast verbosity</string>
    <string name="mn_new_item">Add a new item</string>
    <string name="mn_new_calendar_rule">Add a calendar rule</string>
    <string name="mn_new_filter_rule">Add a filter rule</string>
    <string name="mn_new_filter">Add a filter</string>
    <string name="tx_rule_name">Rule name</string>
    <string name="tx_Monday">Monday</string>
    <string name="tx_Tuesday">Tuesday</string>
    <string name="tx_Wednesday">Wednesday</string>
    <string name="tx_Thursday">Thursday</string>
    <string name="tx_Friday">Friday</string>
    <string name="tx_Saturday">Saturday</string>
    <string name="tx_Sunday">Sunday</string>
    <string name="tx_all_days">All days</string>
    <string name="tx_no_days">No days</string>
    <string name="tx_work_days">Work days</string>
    <string name="tx_week_end">Week end</string>
    <string name="tx_from_time">From 00:00</string>
    <string name="tx_to_time">To 23:59</string>
    <string name="tx_rule_validation">Rule validation:</string>
    <string name="ac_edit_calendar_rule">Edit a calendar rule</string>
    <string name="ac_edit_filter_rule">Edit a filter rule</string>
    <string name="ac_edit_filter_patterns">Edit filter patterns</string>
    <string name="ac_pick_action">Pick an action</string>
    <string name="ac_edit_filter">Edit a filter</string>
    <string name="tx_calendar_rule_name">Calendar name:</string>
    <string name="tx_calendar_rule_format">Format:</string>
    <string name="tx_call_received_default">0</string>
    <string name="tx_call_triggered_default">0</string>
    <string name="tx_filter_rule_name">Filter rule name:</string>
    <string name="tx_filter_rule_description">Description:</string>
    <string name="tx_filter_name">Filter name:</string>
    <string name="tx_action_name">Action name:</string>
    <string name="tx_data_bound_no_data">No data</string>
    <string name="tx_logged_call_timestamp">Timestamp:</string>
    <string name="tx_logged_call_number">Calling number:</string>
    <string name="tx_logged_call_description">Description:</string>
    <string name="tx_logged_call_none">none</string>
    <string name="tx_logged_call_action_matched">Action matched:</string>
    <string name="tx_service_run_start">Start service:</string>
    <string name="tx_service_run_stop">End service:</string>
    <string name="tx_service_run_tot_received">Total received:</string>
    <string name="tx_service_run_tot_triggered">Total triggered:</string>
    <string name="mn_save_rule">Save a rule</string>
    <string name="mn_delete_rule">Delete rule</string>
    <string name="mn_change_rule">Change a rule</string>
    <string name="tx_validation_rule_name_empty">Rule name can not be empty.\nNo saving allowed</string>
    <string name="tx_validation_filter_name_empty">Filter name can not be empty.\nNo saving allowed</string>
    <string name="tx_validation_rule_name_used">Rule name already used.\nNo saving allowed</string>
    <string name="tx_validation_filter_name_used">Filter name already used.\nNo saving allowed</string>
    <string name="tx_validation_rule_valid">The rule is valid.\nSaving allowed</string>
    <string name="tx_validation_filter_valid">The filter is valid.\nSaving allowed</string>
    <string name="tx_rule_delete_confirm">Doy you want to delete this rule?</string>
    <string name="tx_filter_delete_confirm">Doy you want to delete this filter?</string>
    <string name="bt_yes_delete">Yes, delete</string>
    <string name="bt_no_keep">No, keep</string>
    <string name="mn_undo_rule">Undo a change</string>
    <string name="tx_validation_rule_no_changes">No changes yet.\nSaving not allowed</string>
    <string name="tx_validation_rule_has_changed">Rule has changed.\nSaving or undo changes is allowed</string>
    <string name="mn_help">Help</string>
    <string name="tx_calendar_rule_help_title">Help on editing calendar rules</string>
    <string name="tx_filter_rule_help_title">Help on editing filter rules</string>
    <string name="tx_filter_help_title">Help on editing filters</string>
    <string name="tx_actions_help_title">Help on chosing actions</string>
    <string name="tx_main_help_title">Help on PrismaCallBlocker</string>
    <string name="tx_description">Description</string>
    <string name="bt_manage_patterns">Manage Patterns</string>
    <string name="tx_patterns_in_rule">Patterns in rule:\n</string>
    <string name="mn_add_pattern">Add a pattern</string>
    <string name="mn_delete_pattern">Delete selected patterns</string>
    <string name="mn_update_patterns">Update patterns</string>
    <string name="mn_pick_log">Pick from log</string>
    <string name="mn_edit_pattern">Edit a single pattern</string>
    <string name="tx_manage_patterns_help">Manage filter patterns</string>
    <string name="tx_calendar_rule_title">Calendar Rule</string>
    <string name="tx_filter_rule_title">Filter Rule</string>
    <string name="tx_action_name_title">Action</string>
    <string name="mn_pick_calendar">Pick a calendar rule</string>
    <string name="mn_pick_patterns">Pick a filter rule</string>
    <string name="mn_pick_action">Pick an action</string>
    <string name="mn_edit_calendar">Edit the calendar rule</string>
    <string name="mn_edit_patterns">Edit the filter rule</string>
    <string name="tx_action_class">Action class:</string>
    <string name="msg_can_not_delete_rule">Can\'t delete because rule name is in use in a filter</string>
    <string name="about_title">Prisma Call Blocker by ConteDiMonteCristo</string>
    <string name="about_email">Contact: prismoid01@gmail.com</string>
    <string name="about_version">Version: X.X</string>
    <string name="about_description">Rule based call blocker application</string>
    <string name="ac_about">About</string>
    <string name="pk_exp_rules">export_rules</string>
    <string name="tx_exp_rules">Export rules</string>
    <string name="pk_imp_rules">import_rules</string>
    <string name="tx_imp_rules">Import rules</string>
    <string name="export_dirpath">com.prismaqf.callblocker</string>
    <string name="export_filename">filters.bin</string>
    <string name="tx_serialization_location">Download/com.prismaqf.callblocker/filters.bin</string>
    <string name="pk_skip_protected">skipProtectedAppsMessage</string>
    <string name="tx_dont_show">Do not show again</string>
    <string name="tx_huawei_protected">Huawei Protected Apps</string>
    <string name="tx_list_protected">List Protected Apps</string>
    <string name="tx_show_protected">Show protected app dialog</string>
    <string name="px_show_protected">showProtected</string>
    <string name="ac_faq">FAQ</string>
    <string name="uri_faq">https://github.com/ConteDiMonteCristo/PrismaCallBlocker/wiki/FAQ</string>
    <string name="tx_settings">Settings</string>

</resources>
