<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:com.prismaqf.callblocker="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_pattern"
        android:title="@string/mn_add_pattern"
        android:orderInCategory="5"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_pick_pattern"
        android:title="@string/mn_pick_log"
        android:orderInCategory="10"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_edit_pattern"
        android:title="@string/mn_edit_pattern"
        android:orderInCategory="15"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_delete_pattern"
        android:title="@string/mn_delete_pattern"
        android:orderInCategory="20"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_update_patterns"
        android:title="@string/mn_update_patterns"
        android:icon="@drawable/ic_save_circle"
        android:orderInCategory="30"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help_patterns"
        android:title="@string/mn_help"
        android:icon="@drawable/ic_help_circle"
        android:orderInCategory="50"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
</menu>